[tool.poetry]
name = "ref_gsd"
version = "0.0.1"
description = "Reference implementation of generalised score distribution in python"
authors = ["Krzysztof Rusek <krusek@agh.edu.pl>"]
license = "Apache License 2.0"
readme = "README.md"

keywords = ["jax", "distribution", "QoE", "test"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]

packages=[{include="gsd", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
jaxlib = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
